--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,14 @@
     margin: 0;
 }
 
+header {
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+    color: yellow;
+    font-size: 4rem;
+    padding: 2rem 0;
+}
+
 body {
     background-image: url('./backg.jpg');
     background-attachment: fixed;
@@ -10,5 +18,5 @@ body {
 }
 
 #content {
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 }
