--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
 
 header {
@@ -9,6 +10,34 @@ header {
     color: yellow;
     font-size: 4rem;
     padding: 2rem 0;
+}
+
+.nav {
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+    color: white;
+    font-size: 1.8rem;
+    padding: 1rem 0;
+}
+
+.main {
+    background-color: rgba(0, 0, 0, 0.4);
+    margin: 4rem 8rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main > p{
+    margin-bottom: 1rem;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.main > img {
+    max-height: 35rem;
+    max-width: 35rem;
 }
 
 body {
